--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
+    "semantic-ui-react": "^0.85.0",
     "typescript": "3.3.3"
   },
   "scripts": {
