--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@types/node": "11.9.4",
     "@types/react": "16.8.3",
     "@types/react-dom": "16.8.2",
+    "history": "^4.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "semantic-ui-react": "^0.85.0",
     "typescript": "3.3.3"
@@ -28,5 +30,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react-router-dom": "^4.3.1"
+  }
 }
