--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "history": "^4.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "semantic-ui-react": "^0.85.0",
