--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "semantic-ui-react": "^0.85.0",
-    "typescript": "3.3.3"
+    "typescript": "3.3.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,6 +33,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react-router-dom": "^4.3.1"
+    "@types/react-router-dom": "^4.3.1",
+    "@types/uuid": "^3.4.4"
   }
 }
