--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/quill": "^2.0.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/uuid": "^3.4.4"
   }
